frontend/test/should_fail/graphof_argument_mismatch.grg
#using "graphof_model.gm"

rule r(var i:int) {
	n:N -e:E-> n;
	if{ graphof(i) != graphof(e); }
---
	
	modify {
	}
}
